--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mildw.github.io/hello-world",
+  "homepage": "http://mildw.github.io/",
   "name": "hello-world",
   "version": "0.1.0",
   "private": true,
